# DigitalOrg

./: .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
configs/: dataset_template.yaml  default.yaml  digitalorgdet_convnext_tiny_word.yaml
digitalorg/: __init__.py  api.py  config.py  detector.py  io.py  pipeline.py  refiner.py  schemas.py  video_tracking.py
scripts/: infer_image.py  run_api.py  track_video_digitalorgdet_refine.py  train_digitalorgdet.py
weights/: README.md
