[project]
name = "digitalorg"
version = "0.1.0"
description = "Text-prompt organoid detection with SAM-family segmentation and ROI refine"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "python-multipart",
  "pyyaml",
  "numpy",
  "opencv-python",
  "pillow",
  "torch",
]

[tool.setuptools.packages.find]
include = ["digitalorg*"]

